ref(KingKoboldControl): Debugging KingKoboldControl